New, largely-empty, tournament template

--- a/project/app/templates/tournament_list.html
+++ b/project/app/templates/tournament_list.html
@@ -24,7 +24,7 @@
                     <tr>
                         <th>{{ tournament.display_number }}</th>
                         <td>
-                            <a href="{% url 'app:board-list' %}{% querystring tournament=tournament.pk %}">{{ tournament }}</a>
+                            <a href="{% url 'app:tournament' pk=tournament.pk %}">{{ tournament }}</a>
                         </td>
                         <td>
                             {% if tournament.signup_deadline %}
