Make the open-for-signups tournament row throb.

--- a/project/app/templates/tournament.html
+++ b/project/app/templates/tournament.html
@@ -4,4 +4,7 @@
 {% endblock title %}
 {% block content %}
     Well I'd tell you all about {{ tournament }} here, if I could think of what I wanted to tell you.
+    <hr />
+    Imagine this is a button: {{ button }}
+    <hr />
 {% endblock content %}
