--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -17,7 +17,7 @@
                     <th scope="col">Who</th>
                     <th scope="col">Partner</th>
                     <th scope="col">Where</th>
-                    <th scope="col">Tournament</th>
+                    <th scope="col">Signed Up For</th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
