Reduce visual jitter on tournament_list page by ...
* using a fixed-width font for the times; and
* only showing the two most-significant time units.  So after an hour (and one minute), it'll read something like "One
hour and one minute ago".

--- a/project/app/templates/tournament_list.html
+++ b/project/app/templates/tournament_list.html
@@ -72,8 +72,8 @@ function updateDurations() {
             suffix = " ago";
          }
          span.innerHTML = then;
-         span.nextElementSibling.innerHTML = " (" + 
-                                             humanizeDuration(durationMS, { units: ["h", "m", "s"], round: true }) + suffix
+         span.nextElementSibling.innerHTML = " (" +
+                                             humanizeDuration(durationMS, { units: ["h", "m", "s"], round: true, largest: 2 }) + suffix
           + ")";
       };
 
