--- a/project/app/templates/tournament.html
+++ b/project/app/templates/tournament.html
@@ -23,7 +23,9 @@
     {% elif tournament.status_str == "Running" %}
         <span style="font-size: 2em;">Running
             {% if tournament.play_completion_deadline %}
-                until {{ tournament.play_completion_deadline }} {{ tournament.play_completion_deadline|date:"e" }}{% endif %}.</span>
+                until {{ tournament.play_completion_deadline }} {{ tournament.play_completion_deadline|date:"e" }}
+            {% endif %}
+        .</span>
         <hr />
         <a href="{% url 'app:table-list' %}?tournament={{ tournament.pk }}">{{ tournament.table_set.count }} Tables</a>.
     {% elif tournament.status_str == "OpenForSignup" %}
