--- a/project/app/templates/board_list.html
+++ b/project/app/templates/board_list.html
@@ -17,7 +17,7 @@
                 {% for board in page_obj %}
                     <tr>
                         <th>{{ board.display_number }}</th>
-                        <td>{{ board.tournament.pk }}</td>
+                        <td>{{ board.tournament.display_number }}</td>
                         <td>
                             <a href="{% url 'app:board-archive' pk=board.pk %}">{{ board }}</a>
                         </td>
