--- a/project/app/templates/tournament_list.html
+++ b/project/app/templates/tournament_list.html
@@ -28,7 +28,7 @@
                             <a href="{% url 'app:tournament' pk=tournament.pk %}">{{ tournament }}</a>
                         </td>
                         <td>{{ tournament.status_str }}</td>
-                        <td>
+                        <td style="{{ tournament.signup_deadline_style }}">
                             {% if tournament.signup_deadline %}
                                 <span class="isoformat">{{ tournament.signup_deadline.isoformat }}</span>
                                 <span class="humanize-me">{{ tournament.signup_deadline|humanized_timestamp }}</span>
@@ -36,8 +36,8 @@
                                 None
                             {% endif %}
                         </td>
-                        <td>
-                            {% if tournament.signup_deadline %}
+                        <td style="{{ tournament.play_completion_deadline_style }}">
+                            {% if tournament.play_completion_deadline %}
                                 <span class="isoformat">{{ tournament.play_completion_deadline.isoformat }}</span>
                                 <span class="humanize-me">{{ tournament.play_completion_deadline|humanized_timestamp }}</span>
                             {% else %}
