--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -50,7 +50,8 @@
                             {% if player.action_button %}
                                 <form method="post" action="{{ player.action_button.form_action }}">
                                     {% csrf_token %}
-                                    <button type="submit"
+                                    <button class="btn btn-primary"
+                                            type="submit"
                                             name="action"
                                             value="{{ player.action_button.button_submit_value }}">
                                         {{ player.action_button.button_content }}
