--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -14,7 +14,7 @@
             <thead>
                 <tr>
                     <th>Status</th>
-                    <th>Tournament</th>
+                    <th>Tournament #</th>
                     <th>Table</th>
                     <th>Board</th>
                     <th>players</th>
@@ -36,7 +36,7 @@
                             </a>
                         </td>
                         <td>
-                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.tournament.pk }}</a>
+                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.tournament.display_number }}</a>
                         </td>
                         <td>
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
