--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -11,7 +11,7 @@
         <table id="player-list"
                class="table caption-top"
                data-players="{{ this_pages_players }}">
-            <caption>Players {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ extra_crap.total_count }}</caption>
+            <caption>Players {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ filtered_count }}</caption>
             <thead>
                 <tr>
                     <th scope="col">Who</th>
