--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -6,7 +6,7 @@
     {% block table_list %}
         <table class="table caption-top">
             {# yep, it's a table of tables #}
-            <caption>{{ page_title }}; {{ total_count }} total</caption>
+            <caption>{{ page_title }}; {{ filtered_count }} total</caption>
             <thead>
                 <tr>
                     <th>Table #</th>
