Tables now have display numbers, like some of the other models.
Alas, it's increased the number of queries I do.  I haven't figured out why :-|

--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -39,7 +39,7 @@
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.tournament.display_number }}</a>
                         </td>
                         <td>
-                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
+                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.display_number }}</a>
                         </td>
                         <td>
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.display_number }}</a>
