Fix another test, and along the way:
* fix up some templates
* delete last reference to "taint"

--- a/project/app/templates/tournament.html
+++ b/project/app/templates/tournament.html
@@ -31,7 +31,7 @@
             {% endif %}
         </span>
         <hr />
-        <a href="{% url 'app:table-list' %}?tournament={{ tournament.pk }}">{{ tournament.table_set.count }} Tables</a>.
+        TODO -- put here a link to the list of hands
     {% elif tournament.status_str == "OpenForSignup" %}
         <span style="font-size: 2em;">Open for Signups until {{ tournament.signup_deadline }} {{ tournament.signup_deadline|date:"e" }}</span>.
         {% if speed_things_up_button %}
