Feecks bored ark ivy

--- a/project/app/templates/board_archive.html
+++ b/project/app/templates/board_archive.html
@@ -27,7 +27,7 @@
                             <a href="{% url 'app:hand-archive' h.pk %}">{{ h.pk }}</a>
                         </th>
                         <td>
-                            <a href="{% url 'app:hand-archive' h.pk %}">{{ h.table }}</a>
+                            <a href="{% url 'app:hand-archive' h.pk %}">{{ h.table_display_number }}</a>
                         </td>
                         <td>
                             <a href="{% url 'app:hand-archive' h.pk %}">{{ h.summary_for_this_viewer }}</a>
