Rename "current_hand" => "current_hand_and_direction"; ...
... also add obvious helper methods

Looks good: unit tests pass, pages look good

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -34,8 +34,8 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if player.ch %}
-                                <a href="{% url 'app:hand-detail' pk=player.ch.pk %}">Table {{ player.ch.table_display_number }}</a>
+                            {% if player.current_hand %}
+                                <a href="{% url 'app:hand-detail' pk=player.ch.pk %}">Table {{ player.current_hand.table_display_number }}</a>
                             {% else %}
                                 <a href="{% url 'app:lobby' %}">lobby</a>
                             {% endif %}
