Bunch of random fixes:
* don't refer to non-existent attribute in player_list.html
* HandManager.create_for_tournament: don't serve up boards from other tournaments!
* _display_and_control: avoid kaboom when viewer isn't seated

... plus random tweaks along the way:

* logging
* hand ordering
* couple more TODOs
* move docs into subdirectory

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -35,7 +35,7 @@
                         </td>
                         <td>
                             {% if player.current_hand %}
-                                <a href="{% url 'app:hand-detail' pk=player.ch.pk %}">Table {{ player.current_hand.table_display_number }}</a>
+                                <a href="{% url 'app:hand-detail' pk=player.pk %}">Table {{ player.current_hand.table_display_number }}</a>
                             {% else %}
                                 <a href="{% url 'app:lobby' %}">lobby</a>
                             {% endif %}
