--- a/project/app/templates/tournament.html
+++ b/project/app/templates/tournament.html
@@ -68,6 +68,7 @@
         {% endif %}
     </span>
     <hr />
+    {# TODO -- just link to the hand-list page, with a suitable filter for this tournament #}
     <table id="hand-list" class="table caption-top">
         <caption>Hands</caption>
         <thead>
